--- a/index.html
+++ b/index.html
@@ -12,132 +12,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <style>
-:root {
-  --accent: #8a63f9;
-  --accent2: #9b5dff;
-  --bg: #000;
-  --glass: rgba(255, 255, 255, 0.08);
-  --blur: blur(15px);
-}
-
-* { box-sizing: border-box; }
-html, body { height: 100%; margin: 0; overflow-x: hidden; font-family: 'Poppins', sans-serif; color: #fff; background: radial-gradient(circle at top, #0a001e, #000); }
-
-header {
-  position: fixed; top: 0; left: 0; right: 0; height: 70px;
-  display: flex; align-items: center; justify-content: space-between;
-  padding: 0 30px; z-index: 20;
-  background: var(--glass);
-  backdrop-filter: var(--blur);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-}
-.brand { font-weight: 800; font-size: 22px; white-space: nowrap; }
-.brand span { color: var(--accent); }
-nav a {
-  color: #fff; text-decoration: none; margin-left: 24px; font-weight: 500;
-  transition: 0.2s; opacity: 0.9;
-}
-nav a:hover { color: var(--accent); opacity: 1; }
-
-canvas#bg {
-  position: fixed; inset: 0; width: 100%; height: 100%;
-  background: radial-gradient(ellipse at 50% -20%, #0b0226 0%, #000 60%);
-  z-index: -1;
-}
-
-section.hero {
-  min-height: 80vh; display: grid; place-items: center;
-  text-align: center; padding: 100px 20px 60px;
-}
-.avatar {
-  width: 140px; height: 140px; border-radius: 50%;
-  border: 3px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 0 40px rgba(155, 93, 255, 0.4);
-  margin-bottom: 20px; transition: transform 0.3s ease;
-}
-.avatar:hover { transform: scale(1.05); }
-
-h1 { font-size: clamp(34px, 6vw, 60px); font-weight: 800; margin-bottom: 10px; }
-h1 .accent { color: var(--accent); }
-.sub {
-  color: #cfcfe9; opacity: 0.9; max-width: 680px; margin: 0 auto 20px;
-  line-height: 1.7; font-size: clamp(14px, 2vw, 18px);
-}
-.cta {
-  display: inline-block; padding: 12px 28px; border-radius: 50px;
-  text-decoration: none; font-weight: 600; color: white;
-  background: linear-gradient(90deg, var(--accent), var(--accent2));
-  box-shadow: 0 0 25px rgba(155, 93, 255, 0.4);
-  transition: all 0.3s ease;
-}
-.cta:hover { transform: scale(1.05); box-shadow: 0 0 35px rgba(155, 93, 255, 0.6); }
-
-.section {
-  text-align: center;
-  padding: 100px 20px;
-  position: relative;
-  z-index: 10;
-}
-.section.dark {
-  background: rgba(255, 255, 255, 0.03);
-  backdrop-filter: var(--blur);
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-}
-.section h2 {
-  font-size: 2.4rem;
-  margin-bottom: 40px;
-  color: #d9c6ff;
-}
-
-.projects-grid {
-  display: flex; flex-wrap: wrap; justify-content: center;
-  gap: 30px; max-width: 1200px; margin: 0 auto;
-}
-.card {
-  background: var(--glass);
-  border-radius: 20px;
-  padding: 25px;
-  width: 320px;
-  text-align: left;
-  backdrop-filter: var(--blur);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.card:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 20px 40px rgba(155, 93, 255, 0.4);
-}
-.card h3 { margin-top: 0; color: #fff; }
-.card p { color: #ccc; font-size: 15px; line-height: 1.6; }
-.card .btn { margin-top: 15px; }
-
-.skills {
-  display: flex; flex-wrap: wrap; gap: 15px;
-  justify-content: center; max-width: 900px; margin: 0 auto;
-}
-.skills span {
-  padding: 10px 18px;
-  border-radius: 50px;
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  backdrop-filter: var(--blur);
-}
-
-footer {
-  background: var(--glass);
-  backdrop-filter: var(--blur);
-  padding: 40px 10px;
-  text-align: center;
-  color: #aaa;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
-}
-footer a { color: var(--accent2); text-decoration: none; transition: 0.2s; }
-footer a:hover { color: var(--accent); }
-</style>
-
+    :root{
+      --accent:#8a63f9;
+      --accent2:#9b5dff;
+      --bg:#000;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -264,19 +142,19 @@ footer a:hover { color: var(--accent); }
     <h2>🚀 Featured Projects</h2>
     <div class="projects-grid">
       <article class="card">
-        <h3>AI Marketing Lab</h3>
+        <h3>Business Development excutive</h3>
         <p>End-to-end digital growth systems using AI. Funnels, SEO at scale, and automation orchestration.</p>
-        <a class="btn" href="https://aimarketinglab.in" target="_blank" rel="noopener">Visit</a>
+        <a class="btn" href="https://" target="_blank" rel="noopener">Visit</a>
       </article>
       <article class="card">
-        <h3>Darzi App</h3>
+        <h3>Market Research analyst</h3>
         <p>On-demand tailoring marketplace. Optimized onboarding, notifications, and analytics loops.</p>
-        <a class="btn" href="https://darzi.services" target="_blank" rel="noopener">Visit</a>
+        <a class="btn" href="https://" target="_blank" rel="noopener">Visit</a>
       </article>
       <article class="card">
-        <h3>The Beldior</h3>
+        <h3>IT Sales</h3>
         <p>Premium skincare storefront with conversion-focused storytelling and automated email flows.</p>
-        <a class="btn" href="https://beldior.com" target="_blank" rel="noopener">Visit</a>
+        <a class="btn" href="https://" target="_blank" rel="noopener">Visit</a>
       </article>
     </div>
   </section>
