--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <h2>💡 Skills & Tools</h2>
     <div class="skills">
       <span>AI Automation</span><span>Web Development</span><span>SEO & AEO</span>
-      <span>UI/UX</span><span>Performance Marketing</span><span>ChatGPT / n8n / Make</span>
+      <span>UI/UX</span><span>Performance Marketing</span><span>IT Sales</span>
     </div>
   </section>
 
@@ -172,7 +172,7 @@
   <section id="contact" class="section">
     <h2>📬 Get In Touch</h2>
     <p class="sub" style="margin-bottom:18px">Have a project in mind? Let’s create something measurable together.</p>
-    <a class="cta" href="mailto:dineshbhairoju@gmail.com">Send Email</a>
+    <a class="cta" href="mailto:dineshcharydinu@gmail.com">Send Email</a>
   </section>
 
   <footer>
