--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
       <h1>Hey, I'm <span class="accent">Dinesh Bhairoju</span></h1>
       <p class="sub">AI-first Digital Marketer & Web Developer — I design automations, websites, and SEO systems that drive measurable growth.</p>
       <a class="cta" href="#projects">See Projects ↓</a>
+      <div class="mode-switch">
+  <button id="toggleMode" class="mini">Night 🌙</button>
+  <button id="autoMode" class="mini">Auto ⟳</button>
+</div>
+
     </div>
   </section>
 
