--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dinesh Bhairoju — AI-first Marketer & Web Developer</title>
+  <style>
+    
+  .mode-switch {
+    margin-top: 10px;
+  }
+  .mini {
+    margin: 0 6px;
+    padding: 8px 14px;
+    border-radius: 9999px;
+    background: rgba(255,255,255,.08);
+    border: 1px solid rgba(255,255,255,.2);
+    color: #fff;
+    cursor: pointer;
+    font-weight: 600;
+    transition: 0.2s;
+  }
+  .mini:hover {
+    transform: translateY(-1px);
+  }
+  .mini.active {
+    background: linear-gradient(90deg, var(--accent), var(--accent2));
+  }
+</style>
+
+    
   <meta name="description" content="Dinesh Bhairoju — AI-first Digital Marketer & Web Developer. Automations, SEO, and modern websites that drive measurable growth." />
 
   <!-- Fonts -->
