--- a/index.html
+++ b/index.html
@@ -242,11 +242,35 @@
     scene.add(dir, amb);
 
     // Stars
-    const starGeo = new THREE.BufferGeometry();
-    const starCnt = 1600; const arr = new Float32Array(starCnt*3);
-    for(let i=0;i<arr.length;i++) arr[i] = (Math.random()-0.5)*120;
-    starGeo.setAttribute('position', new THREE.BufferAttribute(arr,3));
-    scene.add(new THREE.Points(starGeo, new THREE.PointsMaterial({size:0.9, color:0xffffff})));
+    // ---------- better stars: layered + twinkle + parallax ----------
+const starLayers = [];
+
+function addStarLayer(count, size, color, spread, speed, opacity){
+  const positions = new Float32Array(count * 3);
+  for (let i = 0; i < positions.length; i++) positions[i] = (Math.random() - 0.5) * spread;
+
+  const geo = new THREE.BufferGeometry();
+  geo.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
+
+  const mat = new THREE.PointsMaterial({
+    size, color, transparent: true, opacity, depthWrite: false
+  });
+
+  const pts = new THREE.Points(geo, mat);
+  pts.userData = {
+    speed,               // slow rotation
+    baseOpacity: opacity,
+    phase: Math.random() * Math.PI * 2  // twinkle offset
+  };
+  scene.add(pts);
+  starLayers.push(pts);
+}
+
+// near / mid / far layers (tune colors & amounts to taste)
+addStarLayer(1200, 0.8, 0xffffff, 140, 0.00022, 0.55);
+addStarLayer( 800, 1.4, 0xC8B6FF, 180, 0.00012, 0.35);
+addStarLayer( 600, 2.0, 0x9B5DFF, 220, 0.00006, 0.22);
+
 
     // Earth group
     const g = new THREE.Group(); scene.add(g);
@@ -307,7 +331,22 @@
       tx += (mx-tx)*0.05; ty += (my-ty)*0.05;
       camera.position.x = tx*0.7; camera.position.y = -ty*0.5;
       camera.lookAt(0,0,0);
+      const t = performance.now() * 0.001;
 
+starLayers.forEach((layer, i) => {
+  // gentle drift
+  layer.rotation.y += layer.userData.speed;
+
+  // twinkle (sinusoidal opacity around base)
+  layer.material.opacity =
+    layer.userData.baseOpacity * (0.7 + 0.3 * Math.sin(t * 1.5 + layer.userData.phase));
+
+  // parallax with mouse (assumes you already have mx,my in [-1..1])
+  layer.position.x = mx * -(i + 1) * 3;
+  layer.position.y = my *  (i + 1) * 3;
+});
+
+      
       renderer.render(scene,camera);
       requestAnimationFrame(tick);
     }
