--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dinesh Bhairoju — AI-first Marketer & Web Developer</title>
   <style>
+<meta name="google-site-verification" content="VXDgK-Y-_6lq_xon8KrlUNYYhPI36T7G5qqVG-kEGCo" />
     
   .mode-switch {
     margin-top: 10px;
