--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- SEO Essentials -->
+<meta name="title" content="Dinesh Bhairoju — AI-first Digital Marketer & Web Developer" />
+<meta name="description" content="AI-first marketer & web developer. I build automations, SEO systems, and creative web experiences that drive measurable growth." />
+<meta name="keywords" content="Dinesh Bhairoju, AI marketing, SEO expert, web developer, automation, digital marketing" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://dineshbhairoju.github.io/" />
+<meta property="og:title" content="Dinesh Bhairoju — AI-first Digital Marketer & Web Developer" />
+<meta property="og:description" content="AI-first marketer & web developer. I build automations, SEO systems, and creative web experiences that drive measurable growth." />
+<meta property="og:image" content="https://dineshbhairoju.github.io/dinesh.jpg" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://dineshbhairoju.github.io/" />
+<meta property="twitter:title" content="Dinesh Bhairoju — AI-first Digital Marketer & Web Developer" />
+<meta property="twitter:description" content="AI-first marketer & web developer. I build automations, SEO systems, and creative web experiences that drive measurable growth." />
+<meta property="twitter:image" content="https://dineshbhairoju.github.io/dinesh.jpg" />
+
   <meta name="google-site-verification" content="VXDgK-Y-_6lq_xon8KrlUNYYhPI36T7G5qqVG-kEGCo" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
