--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-37664Q2CW6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-37664Q2CW6');
+</script>
   <!-- SEO Essentials -->
 <meta name="title" content="Dinesh Bhairoju — AI-first Digital Marketer & Web Developer" />
 <meta name="description" content="AI-first marketer & web developer. I build automations, SEO systems, and creative web experiences that drive measurable growth." />
