--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ footer a{color:#cdb7ff;text-decoration:none}
 <section class="hero">
   <div>
     <img src="dinesh.jpg" class="avatar" alt="Dinesh Bhairoju">
-    <h1>Hi, I'm <span>Dinesh</span></h1>
+    <h1>Hi, I'm <span>Dinesh Bhairoju</span></h1>
     <p class="sub">
       Digital Marketing & Ecommerce specialist focused on SEO, analytics, automation,
       and building high-performance websites that drive measurable growth.
